# kesher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker_compose.yaml  main.py  pyproject.toml
src/: main.py
src/core/: __init__.py  daemon.py  deamon.py  engine.py  entry.py  process.py
src/model/: __init__.py  process.py
src/models/: __init__.py
src/util/: __init__.py  console.py  const.py  enviroment.py  environment.py  logger.py  state.py
src/view/: footer.py  header.py  menu.py  monitor.py
tests/: command.py  conftest.py  pytest.ini  test_delete_process.py  test_start_process.py  test_status_process.py  test_stop_process.py  util.py
tests/test_e2e/: test_log_process.py  test_status_process.py
