[project]
name = "kesher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "faker>=40.1.2",
    "pre-commit>=4.5.1",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "textual>=7.5.0",
    "uvloop>=0.22.1",
]
